--- a/pyconpads/templates/list.html
+++ b/pyconpads/templates/list.html
@@ -15,11 +15,14 @@
           $(this).text('Edit');
         }
       );
-      $('.pad-edit span').editable("", {
+      $('.pad-edit span').editable("{% url update-name %}", {
         tooltip: 'click to edit...',
         indicator: '<img src="{{ MEDIA_URL }}site/imgs/ajax-loader.gif" />',
-        type: 'textarea',
-        style  : "inherit"
+        callback: function (result_json) {
+                    result = $.parseJSON(result_json)
+                    $(this).text(result.name);
+                    $(this).closest('.pad a').text(result.name)
+                  }
       });
    });
   </script>
@@ -30,6 +33,9 @@
   .pad-edit {
     display: none;
   }
+  .pad-edit span {
+    display: inline;
+  }
 </style>
 {% endblock %}
 
@@ -37,8 +43,8 @@
 <a href="#" id="edit-btn">Edit</a>
 <ul>
   {% for pad in pads %}
-    <li class="pad"><a href="{{ pad.etherpad_url }}">{{ pad.id }}</a></li>
-    <li class="pad-edit"><span>{{ pad.id }}</span></li>
+    <li class="pad"><a href="{{ pad.etherpad_url }}">{{ pad }}</a></li>
+    <li class="pad-edit"><span id="{{ pad.id }}">{{ pad }}</span></li>
   {% endfor %}
 </ul>
 {% endblock %}
