--- a/pyconpads/templates/list.html
+++ b/pyconpads/templates/list.html
@@ -42,9 +42,9 @@
 {% endblock %}
 
 {% block main_content %}
-<h1>Pad Index</h1>
-<div class="promo">sponsored by HUGE</div>
-<p>Here are all of the pads 
+<div class="promo">hosting generously provided by<div class="logo"><a href="http://hugeinc.com"><img src="{{ MEDIA_URL }}site/imgs/HUGE_200_white.png" alt="HUGE" /></a></div></div>
+<h1>PyCon Pads</h1>
+<p>Here are all of the etherpads available.  Feel free to update them with a useful description and/or talk time.</p>
 <table id="pads-table" class="tablesorter">
   <thead>
   <tr>
