--- a/pyconpads/templates/base.html
+++ b/pyconpads/templates/base.html
@@ -3,6 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+  <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <title>{% block title %}PyCon Pads - Sponsored by HUGE{% endblock %}</title>
@@ -10,10 +11,43 @@
 </head>
 
 <body>
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-12809560-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+    })();
+
+  </script>
 {% block main_content %}{% endblock %}
 {% block js %}
 <script src="{{ MEDIA_URL }}site/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{ MEDIA_URL }}site/js/jquery.jeditable.min.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
+
+<script type="text/javascript">
+var _sf_async_config={uid:2469,domain:"pyconpads.net"};
+(function(){
+  function loadChartbeat() {
+    window._sf_endpt=(new Date()).getTime();
+    var e = document.createElement('script');
+    e.setAttribute('language', 'javascript');
+    e.setAttribute('type', 'text/javascript');
+    e.setAttribute('src',
+       (("https:" == document.location.protocol) ? "https://s3.amazonaws.com/" : "http://") +
+       "static.chartbeat.com/js/chartbeat.js");
+    document.body.appendChild(e);
+  }
+  var oldonload = window.onload;
+  window.onload = (typeof window.onload != 'function') ?
+     loadChartbeat : function() { oldonload(); loadChartbeat(); };
+})();
+
+</script>
 </body>
 </html>
