Tweaked the page title.

--- a/pyconpads/templates/base.html
+++ b/pyconpads/templates/base.html
@@ -6,7 +6,7 @@
   <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <title>{% block title %}PyCon Pads - Sponsored by HUGE{% endblock %}</title>
+  <title>{% block title %}PyCon Pads - Pad List - Sponsored by HUGE{% endblock %}</title>
   {% block css %}{% endblock %}
 </head>
 
